--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.CommUniDrive"
+        android:largeHeap="true"
         tools:targetApi="31">
         <activity
             android:name=".Register"
