- Implementata la funzione di ricerca per nome dalla barra di ricerca. - Risolto problema della visualizzazione dei nomi nello spinner delle lingue - Aggiornamento profilo utente.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/Theme.CommUniDrive"
-        android:largeHeap="true"
         tools:targetApi="31">
+        <activity
+            android:name=".Profile"
+            android:exported="false" />
         <activity
             android:name=".Register"
             android:exported="false" />
